# gpa

./: .breakpoints  .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
src/: __init__.py  course.py  gpa.py
tests/: test_course.py  test_gpa.py
tests/data/: test_grades copy.json  test_grades.json
